# torch_kitti

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
doc/source/: conf.py  index.rst
integration_tests/: test_transforms_torchvision.py
src/torch_kitti/: __init__.py  _types.py
src/torch_kitti/common/: __init__.py  _data_elem.py  _dataset.py
src/torch_kitti/depth_completion/: __init__.py  dataset.py
src/torch_kitti/depth_prediction/: __init__.py  dataset.py
src/torch_kitti/metrics/: functional.py
src/torch_kitti/raw/: __init__.py  _download.py  calibration.py  dataset.py  lidar_point_cloud.py
tests/: conftest.py  dataset_utils.py  test_torch_kitti.py  test_transforms.py
tests/depth_completion/: test_dataset.py  test_transform.py
tests/depth_prediction/: test_dataset.py  test_transform.py
tests/metrics/: test_functional.py
tests/raw/: test_calibration.py  test_dataset.py  test_inertial_measurement_unit.py  test_lidar_point_cloud.py
tests/test_data/: depth_completion_train_date_drives.pkl  depth_completion_val_date_drives.pkl  raw_date_drives.pkl
torch_kitti/: __init__.py
torch_kitti/depth_completion/: __init__.py  _download.py  dataset.py  download.py
torch_kitti/depth_prediction/: dataset.py
torch_kitti/metrics/: __init__.py  functional.py
torch_kitti/raw/: calibration.py  dataset.py  inertial_measurement_unit.py  lidar_point_cloud.py
torch_kitti/scripts/: torch_kitti.py
torch_kitti/transforms/: __init__.py  _transforms.py  functional.py
(+11 files in other folders)
