[metadata]
name = torch-kitti
version = attr: torch_kitti.__version__
author = andrea conti
author_email = andrea.conti@tutanota.com
description = utilities and pytorch datasets for the KITTI Vision Benchmark Suite
long_description = file: README.md
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
package_dir =
    =src
packages = find:

install_requires = 
    torch >= 1.5.0
    torchvision >= 0.6.0
    setuptools >= 46.3.0
    Pillow >= 7.1.0
    requests >= 2.24.0
    tqdm >= 4.51.0

[options.package_data]
* = *.txt, *.pkl

[options.entry_points]
console_scripts =
    torch_kitti = torch_kitti.scripts.torch_kitti:main

[options.extras_require]
dev =
    ipython
    pytest
    pytest-cov
    pre-commit
    isort
    black
    python-language-server
    pyls-isort
    pyls-black
    pyls-mypy
    pycodestyle
    pyflakes
    tox

[options.packages.find]
where = src
